fix overflow

--- a/components/windows/FileExplorer/FileExplorer.module.css
+++ b/components/windows/FileExplorer/FileExplorer.module.css
@@ -188,6 +188,8 @@
 .content {
 	width: 100%;
 	border-radius: 0 0 15px;
+	display: flex;
+	flex-direction: column;
 }
 
 .child {
